--- a/MountainCartAgent3.ipynb
+++ b/MountainCartAgent3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNWLZaTimFIwZv+R4QwuS9",
+      "authorship_tag": "ABX9TyOffNp1kiyDmccQMElxzF9B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "id": "WfMhAskozyYF",
         "outputId": "988dbeba-7a40-4667-e3b1-7cdac1f937be"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,7 +309,7 @@
         "id": "EP9ZpL48z2rp",
         "outputId": "0c01c865-0fda-47b4-f2af-c84672a9d71e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -331,7 +331,7 @@
       "metadata": {
         "id": "ZU96hmAAz_Uz"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -347,7 +347,7 @@
         "id": "t7k9Jyd50iHC",
         "outputId": "a4c2eb99-b5b8-40a8-837c-5cdadddd99e7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
       "metadata": {
         "id": "BpdkS_CC0k4D"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,7 +395,7 @@
       "metadata": {
         "id": "Wk3IICMv3Tcz"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -412,7 +412,7 @@
         "id": "DvZWx8SH3i9B",
         "outputId": "6743f756-d086-4b27-9fe6-b83ecb64e670"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +440,7 @@
         "id": "dSM__ocZ5PNK",
         "outputId": "e5a8d1e0-5423-4a04-b656-ed4afeead87b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +465,7 @@
         "id": "8Q6eRGwz_AOF",
         "outputId": "268f25b6-9e9a-4aa7-c507-d5ba14ea23f2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +490,7 @@
         "id": "nKA8F4Eq_TA1",
         "outputId": "8154854b-621a-49e3-e5a5-8b4cee2288a0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +537,7 @@
         "id": "tBWnUACTAj9A",
         "outputId": "a70e1f3c-44ff-4d12-fee4-6c7324e59264"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,7 +580,7 @@
       "metadata": {
         "id": "XOvyLcCvBpiB"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -603,7 +603,7 @@
       "metadata": {
         "id": "Nuvks3GcCX5P"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -663,7 +663,7 @@
       "metadata": {
         "id": "C4gOaf18I7hl"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -696,7 +696,7 @@
       "metadata": {
         "id": "hvdk-WPfLk1v"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -728,7 +728,7 @@
       "metadata": {
         "id": "11WsbLGPOOMM"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -750,7 +750,7 @@
       "metadata": {
         "id": "EIi_hRovOmwQ"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -778,7 +778,7 @@
       "metadata": {
         "id": "7SKbcJqaP7gd"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -789,7 +789,7 @@
       "metadata": {
         "id": "RlyZ8gnBQHLY"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +804,7 @@
         "id": "y2yE67YXQN87",
         "outputId": "525dfe3e-86b2-4b85-f7d7-9b559e391721"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +860,7 @@
       "metadata": {
         "id": "ODk9EkGVQR8G"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -884,7 +884,7 @@
         "id": "HuRTd_vUYNSB",
         "outputId": "baabdcca-1315-4313-b1bd-e70684dcc0e2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -910,7 +910,7 @@
         "id": "74IhW2Q0YgmI",
         "outputId": "6eefe734-2d7d-4bd4-d136-26817486f7ea"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -927,7 +927,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I think we are recieving horrible returns because the cart is sitting at the bottom of the valley and is not taking any actions, its just getting the worst possible return at this point and we are going to have to train it to change that"
+        "I think we are recieving horrible returns because the cart is sitting at the bottom of the valley and is not taking any actions, its just getting the worst possible return at this point and we are going to have to train it to change that. The environment only allows 200 time steps and each time step gets a -1 reward so we are just recieving the lowest reward at this point."
       ],
       "metadata": {
         "id": "WIwKssPs1LM5"
@@ -966,7 +966,7 @@
       "metadata": {
         "id": "UazluP_UYwOh"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -998,7 +998,7 @@
         "id": "Gw9F7KYk51Yp",
         "outputId": "3b6ea29a-b94e-496d-eb62-8237032966a7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,7 +1031,7 @@
         "id": "tiIWvmJg6CAd",
         "outputId": "0401ed24-d5fa-4e8e-8a5a-9ee6d3b31a6e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1077,7 +1077,7 @@
         "id": "sWuMD6Kv6ZVM",
         "outputId": "c5a62891-20a9-4a30-ef34-199a127eed64"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1110,7 +1110,7 @@
         "id": "oDtiMay7DURw",
         "outputId": "ba682d54-7267-4cb0-b248-90295179de8a"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1165,7 +1165,7 @@
         "id": "Wltb7MCdDwFi",
         "outputId": "d106c731-d08d-4254-8fa6-1b3c8081f25a"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1199,7 +1199,7 @@
         "id": "yHuYAAPOFKtH",
         "outputId": "f2c93a7e-dd65-4cce-f206-9b99223486dc"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1227,7 +1227,7 @@
         "id": "keiCVSjZFUue",
         "outputId": "99539bb9-a26a-48d0-cbf0-a237f0228bc4"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2155,7 +2155,7 @@
         "id": "NgPaQeovFgIR",
         "outputId": "241b88ae-4ddf-40ef-ef53-a46e0c9b014f"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -2329,7 +2329,7 @@
         "id": "qH6Q7ZBjfZd8",
         "outputId": "1f3e010b-5d5c-4d25-8a1c-fb1bebef72df"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2381,7 +2381,7 @@
       "metadata": {
         "id": "yBSsV6S6ixXY"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2418,7 +2418,7 @@
         "id": "asnNW08Rj5Ji",
         "outputId": "1ca673e0-99bc-424c-841f-0f6d9dd96ca4"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2459,7 +2459,7 @@
         "id": "hBwiCm2ylTid",
         "outputId": "75277157-0f48-4fb6-a0ef-876ff4eb6331"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
